--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@
     transform: rotate(360deg);
   }
 }
+
+.app_div
+{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+input
+{ 
+  padding: 10px;
+  margin: 20px;
+  width: 300px;
+  font-size: 16px;
+}
+
+.search_bar
+{
+  display: flex;
+  justify-content: center;
+}
